--- a/styling.css
+++ b/styling.css
@@ -10,3 +10,11 @@ body {
     height: 100vh;
     background-color: #f0f0f0;
 }
+
+div {
+    width: 400px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
