--- a/styling.css
+++ b/styling.css
@@ -17,4 +17,8 @@ div {
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 1.1rem;
+    background-color: #4A90E2;
+    color: #ffffff;
+    text-shadow: 1px 1px 2px black;
 }
