--- a/styling.css
+++ b/styling.css
@@ -18,11 +18,11 @@ div {
     justify-content: center;
     align-items: center;
     font-size: 1.1rem;
-    background-color: #4A90E2;
+    background-color: #ff0000;
     color: #ffffff;
     text-shadow: 1px 1px 2px black;
     border-radius: 10px;
-    border: 1px solid #3A78C2;
+    border: 1px solid #000000;
     background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.2) 30%, rgba(0, 0, 0, 0.2) 100%);
     box-shadow: 
         3px 3px 10px rgba(0, 0, 0, 0.3),
